<resources>
    <string name="Home">Главная</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Профиль</string>
    <string name="Friends">Друзья</string>
    <string name="Groups">Группы</string>
    <string name="Message">Сообщение</string>
    <string name="message">Message</string>
    <string name="app_name">My App</string>
    <string name="sendMessage">Отправить</string>
    <string name="Answer">Ответ</string>
    <string name="Info">Информация:</string>
</resources>