<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment2"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/Home"
        />
    <item
        android:id="@+id/friendsFragment2"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/Friends"
        />
    <item
        android:id="@+id/groupsFragment2"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/Groups"
        />
    <item
        android:id="@+id/messageFragment2"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/Message"
        />
    <item
    android:id="@+id/profileFragment2"
    android:icon="@drawable/baseline_person_24"
    android:title="@string/Profile"
    />


</menu>